--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,14 +5,19 @@ on:
 jobs:
   playwrighttests:
     runs-on: ubuntu-latest
+    container:
+      image: mcr.mircrosoft.com/playwright:v1.52.0-focal
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Run Tests
         run: |
           echo "Start the shopping store application"
+          ./shopping-store-linux-amd64 &
           echo "Install dependencies from lockfile"
+          npm ci
           echo "Run playwright tests"
+          npm run test:ci
 
            
 
