--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
   playwrighttests:
     runs-on: ubuntu-latest
     container:
-      image: mcr.mircrosoft.com/playwright:v1.52.0-focal
+      image: mcr.mircrosoft.com/playwright:v1.52.0-noble
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
